k8s/kustomize/base/networkpolicy-default-deny.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: tobogganing-default-deny
  namespace: tobogganing
spec:
  podSelector: {}
  policyTypes:
    - Ingress
    - Egress
